doc/windows/Delphi/64bit/single_card/gts.pas

unit gts;

interface

const  GTDll = 'gts.dll';

Const DLL_VERSION_0 = 2;
Const DLL_VERSION_1 = 1;
Const DLL_VERSION_2 = 0;
Const DLL_VERSION_3 = 1;
Const DLL_VERSION_4 = 5;
Const DLL_VERSION_5 = 0;
Const DLL_VERSION_6 = 6;
Const DLL_VERSION_7 = 0;
Const DLL_VERSION_8 = 7;

Const MC_NONE  = -1;

Const MC_LIMIT_POSITIVE = 0;
Const MC_LIMIT_NEGATIVE = 1 ;
Const MC_ALARM = 2;
Const MC_HOME = 3;
Const MC_GPI = 4;
Const MC_ARRIVE = 5;
Const MC_MPG = 6;

Const MC_ENABLE = 10;
Const MC_CLEAR = 11;
Const MC_GPO = 12;

Const MC_DAC = 20;
Const MC_STEP = 21;
Const MC_PULSE = 22;
Const MC_ENCODER = 23;
Const MC_ADC = 24;

Const MC_AXIS = 30;
Const MC_PROFILE = 31;
Const MC_CONTROL = 32;

Const CAPTURE_HOME = 1;
Const CAPTURE_INDEX = 2;
Const CAPTURE_PROBE = 3;
Const CAPTURE_HSIO0 = 6;
Const CAPTURE_HSIO1 = 7;
Const CAPTURE_HOME_GPI = 8;

Const PT_MODE_STATIC = 0;
Const PT_MODE_DYNAMIC = 1;

Const PT_SEGMENT_NORMAL = 0;
Const PT_SEGMENT_EVEN = 1;
Const PT_SEGMENT_STOP = 2;

Const GEAR_MASTER_ENCODER = 1;
Const GEAR_MASTER_PROFILE = 2;
Const GEAR_MASTER_AXIS = 3;

Const FOLLOW_MASTER_ENCODER = 1;
Const FOLLOW_MASTER_PROFILE = 2;
Const FOLLOW_MASTER_AXIS = 3;

Const FOLLOW_EVENT_START = 1;
Const FOLLOW_EVENT_PASS = 2;

Const GEAR_EVENT_START = 1;
Const GEAR_EVENT_PASS = 2;
Const GEAR_EVENT_AREA = 5;

Const FOLLOW_SEGMENT_NORMAL = 0;
Const FOLLOW_SEGMENT_EVEN = 1;
Const FOLLOW_SEGMENT_STOP = 2;
Const FOLLOW_SEGMENT_CONTINUE = 3;

Const INTERPOLATION_AXIS_MAX = 4;
Const CRD_FIFO_MAX = 4096;
Const FIFO_MAX = 2;
Const CRD_MAX = 2;
Const CRD_OPERATION_DATA_EXT_MAX = 2;

Const CRD_OPERATION_TYPE_NONE = 0;
Const CRD_OPERATION_TYPE_BUF_IO_DELAY = 1;
Const CRD_OPERATION_TYPE_LASER_ON = 2;
Const CRD_OPERATION_TYPE_LASER_OFF = 3;
Const CRD_OPERATION_TYPE_BUF_DA = 4;
Const CRD_OPERATION_TYPE_LASER_CMD = 5;
Const CRD_OPERATION_TYPE_LASER_FOLLOW = 6;
Const CRD_OPERATION_TYPE_LMTS_ON = 7;
Const CRD_OPERATION_TYPE_LMTS_OFF = 8;
Const CRD_OPERATION_TYPE_SET_STOP_IO = 9;
Const CRD_OPERATION_TYPE_BUF_MOVE = 10;
Const CRD_OPERATION_TYPE_BUF_GEAR = 11;
Const CRD_OPERATION_TYPE_SET_SEG_NUM = 12;
Const CRD_OPERATION_TYPE_STOP_MOTION = 13;
Const CRD_OPERATION_TYPE_SET_VAR_VALUE = 14;
Const CRD_OPERATION_TYPE_JUMP_NEXT_SEG = 15;
Const CRD_OPERATION_TYPE_SYNCH_PRF_POS = 16;
Const CRD_OPERATION_TYPE_VIRTUAL_TO_ACTUAL = 17;
Const CRD_OPERATION_TYPE_SET_USER_VAR = 18;
Const CRD_OPERATION_TYPE_SET_DO_BIT_PULSE = 19;
Const CRD_OPERATION_TYPE_BUF_COMPAREPULSE = 20;
Const CRD_OPERATION_TYPE_LASER_ON_EX = 21;
Const CRD_OPERATION_TYPE_LASER_OFF_EX = 22;
Const CRD_OPERATION_TYPE_LASER_CMD_EX = 23;
Const CRD_OPERATION_TYPE_LASER_FOLLOW_RATIO_EX = 24;
Const CRD_OPERATION_TYPE_LASER_FOLLOW_MODE = 25;
Const CRD_OPERATION_TYPE_LASER_FOLLOW_OFF = 26;
Const CRD_OPERATION_TYPE_LASER_FOLLOW_OFF_EX = 27;
Const CRD_OPERATION_TYPE_LASER_FOLLOW_SPLINE = 28;
Const CRD_OPERATION_TYPE_MOTION_DATA = 29;

Const CRD_OPERATION_TYPE_BUF_TREND = 50;

Const CRD_OPERATION_TYPE_BUF_EVENT_ON = 70;
Const CRD_OPERATION_TYPE_BUF_EVENT_OFF = 71;

Const INTERPOLATION_MOTION_TYPE_LINE = 0;
Const INTERPOLATION_MOTION_TYPE_CIRCLE = 1;
Const INTERPOLATION_MOTION_TYPE_HELIX = 2;
Const INTERPOLATION_MOTION_TYPE_CIRCLE_3D = 3;

Const INTERPOLATION_CIRCLE_PLAT_XY = 0;
Const INTERPOLATION_CIRCLE_PLAT_YZ = 1;
Const INTERPOLATION_CIRCLE_PLAT_ZX = 2;

Const INTERPOLATION_HELIX_CIRCLE_XY_LINE_Z = 0;
Const INTERPOLATION_HELIX_CIRCLE_YZ_LINE_X = 1;
Const INTERPOLATION_HELIX_CIRCLE_ZX_LINE_Y = 2;

Const INTERPOLATION_CIRCLE_DIR_CW = 0;
Const INTERPOLATION_CIRCLE_DIR_CCW = 1;
Const COMPARE_PORT_HSIO  = 0;
Const COMPARE_PORT_GPO  = 1;

Const  COMPARE2D_MODE_2D = 1;
Const  COMPARE2D_MODE_1D = 0;

Const  INTERFACEBOARD20 = 2;
Const  INTERFACEBOARD30 = 3;


Const AXIS_LASER = 7;
Const AXIS_LASER_EX = 8;

Const LASER_CTRL_MODE_PWM1 = 0;
Const LASER_CTRL_FREQUENCY = 1;
Const LASER_CTRL_VOLTAGE = 2;
Const LASER_CTRL_MODE_PWM2 = 3;

Const CRD_BUFFER_MODE_DYNAMIC_DEFAULT = 0;
Const CRD_BUFFER_MODE_DYNAMIC_KEEP = 1;
Const CRD_BUFFER_MODE_STATIC_INPUT = 11;
Const CRD_BUFFER_MODE_STATIC_READY = 12;
Const CRD_BUFFER_MODE_STATIC_START = 13;

Const CRD_SMOOTH_MODE_NONE = 0;
Const CRD_SMOOTH_MODE_PERCENT = 1;
Const CRD_SMOOTH_MODE_JERK = 2;


type TTrapPrm =record
    acc :Double;
    dec :Double;
    velStart :Double;
    smoothTime :SmallInt;
end;

type TJogPrm  =record
    acc :Double;
    dec :Double;
    smooth :Double;
end;

type TPid =record
    kp :Double;
    ki :Double;
    kd :Double;
    kvff :Double;
    kaff :Double;

    integralLimit:LongInt;
    derivativeLimit:LongInt;
    limit :SmallInt;
end;

type TThreadSts =record
    run : SmallInt;
    errorValue : SmallInt;
    result : Double;
    line : SmallInt;
end;

type TVarInfo = record
    id : SmallInt;
    dataType : SmallInt;
    name :array[0..31] of Byte;
end;

type TCompileInfo = record
	pFileName:String;
	pLineNo:^SmallInt;
	pMessage:String;
end;

type TCrdPrm = record
    dimension: SmallInt;
    profile:array[0..7] of SmallInt;
    synVelMax:Double;
    synAccMax:Double;
    evenTime: SmallInt;
    setOriginFlag:SmallInt;
    originPos:array[0..7] of LongInt;
end;

type TCrdBufOperation = record
    flag: SmallInt;
    delay:Word;
    doType: SmallInt;
    doMask:Word;
    doValue:Word;
    dataExt:array[0..1] of Word;
end;

type TCrdData = record
    motionType:SmallInt;
    circlePlat:SmallInt;
    pos:array[0..3] of LongInt;
    radius:Double;
    circleDir:SmallInt;
    center:array[0..2] of Double;
    vel:Double;
    acc:Double;
    velEndZero:SmallInt;
    operation:TCrdBufOperation;

    cos:array[0..3] of Double;
    velEnd:Double;
    velEndAdjust:Double;
    r:Double;
end;

type TTrigger = record
    encoder: SmallInt;
    probeType:SmallInt;
    probeIndex: SmallInt;
    offset:SmallInt;
    windowOnly:SmallInt;
    firstPosition:LongInt;
    lastPosition:LongInt;
end;

type TTriggerStatus = record
    execute:SmallInt;
    done:SmallInt;
    position:LongInt;
end;

type TriggerStatusEx = record
    execute:SmallInt;
    done:SmallInt;
    position:LongInt;
    clock:LongInt;
    loopCount:LongInt;
end;

type T2DCompareData = record
	px:LongInt;
	py:LongInt;
end;

type T2DComparePrm = record
	encx:SmallInt;
	ency:SmallInt;
	source:SmallInt;
	outputType:SmallInt;
	startLevel:SmallInt;
	time:SmallInt;
	maxerr:SmallInt;
	threshold:SmallInt;
end;

type TCrdTime = record
	time:Double;
	segmentUsed:LongInt
	segmentHead:LongInt
	segmentTail:LongInt
end;

type TCrdSmoothInfo = record
	enable:SmallInt
	smoothMode:SmallInt
	percent:SmallInt
	accStartPercent:SmallInt
	decEndPercent:SmallInt
	jerkMax:Double
end;

type TCrdSmooth = record
	percent:SmallInt
	accStartPercent:SmallInt
	decEndPercent:SmallInt
	reserve:Double
end;

function GT_GetDllVersion(out pDllVersion:String):SmallInt; stdcall; External GTDLL;
function GT_SetCardNo(index:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCardNo(out pIndex:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_GetVersion(out pVersion:String): SmallInt; stdcall; External GTDLL;
function GT_GetInterfaceBoardSts(out pStatus:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetInterfaceBoardSts(interfaceType:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_Open(channel:SmallInt=0;param:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_Close: SmallInt; stdcall; External GTDLL;

function GT_LoadConfig(pFile:String): SmallInt; stdcall; External GTDLL;

function GT_AlarmOff(axis:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_AlarmOn(axis:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_LmtsOn(axis:SmallInt;limitType:SmallInt =-1): SmallInt; stdcall; External GTDLL;
function GT_LmtsOff(axis:SmallInt;limitType:SmallInt=-1): SmallInt; stdcall; External GTDLL;
function GT_ProfileScale(axis:SmallInt ;alpha:SmallInt ;beta:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_EncScale(axis:SmallInt ;alpha:SmallInt ;beta:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_StepDir(step:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_StepPulse(step:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_SetMtrBias(dac:SmallInt ;bias:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_GetMtrBias(dac:SmallInt ;out pBias:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_SetMtrLmt(dac:SmallInt ;limit:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_GetMtrLmt(dac:SmallInt ;out pLimit:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_EncSns(sense:Word ): SmallInt; stdcall; External GTDLL;
function GT_EncOn(encoder:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_EncOff(encoder:SmallInt ): SmallInt; stdcall; External GTDLL;
function GT_SetPosErr(control:SmallInt ;error:LongInt ): SmallInt; stdcall; External GTDLL;
function GT_GetPosErr(control:SmallInt ;out pError:LongInt ): SmallInt; stdcall; External GTDLL;
function GT_SetStopDec(profile:SmallInt ;decSmoothStop:Double ;decAbruptStop:Double ): SmallInt; stdcall; External GTDLL;
function GT_GetStopDec(profile:SmallInt ; out pDecSmoothStop:Double;out pDecAbruptStop:Double ): SmallInt; stdcall; External GTDLL;
function GT_LmtSns(sense:Word): SmallInt; stdcall; External GTDLL;
function GT_CtrlMode(axis:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetStopIo(axis:SmallInt;stopType:SmallInt;inputType:SmallInt;inputIndex:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GpiSns(sense:Word): SmallInt; stdcall; External GTDLL;
function GT_SetAdcFilter(adc:SmallInt;filterTime:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisPrfVelFilter(axis:SmallInt;filterNumExp:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisPrfVelFilter(axis:SmallInt;out pFilterNumExp:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisEncVelFilter(axis:SmallInt;filterNumExp:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncVelFilter(axis:SmallInt;out pFilterNumExp:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisInputShaping(axis:SmallInt;enable:SmallInt;count:SmallInt;k:Double): SmallInt; stdcall; External GTDLL;

function GT_SetDo(doType:SmallInt;value:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetDoBit(doType:SmallInt;doIndex:SmallInt;value:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetDo(doType : SmallInt; out pValue:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetDoBitReverse(doType : SmallInt; doIndex:SmallInt;value:SmallInt;reverseTime:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetDoMask(doType:SmallInt;doMask:Word;value:LongInt): SmallInt; stdcall; External GTDLL;
function GT_EnableDoBitPulse(doType:SmallInt;doIndex:SmallInt;highLevelTime:Word;lowLevelTime:Word;pulseNum:LongInt;firstLevel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_DisableDoBitPulse(doType:SmallInt;doIndex:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_GetDi(diType : SmallInt; out pValue:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetDiReverseCount(diType : SmallInt; diIndex : SmallInt; out pReverseCount : LongWord; count : SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_SetDiReverseCount(diType : SmallInt; diIndex : SmallInt; var pReverseCount : LongWord; count : SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetDiRaw(diType : SmallInt; out pValue:LongInt): SmallInt; stdcall; External GTDLL;

function GT_SetDac(dac : SmallInt;var pValue:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetDac(dac : SmallInt;out pValue:SmallInt;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetAdc(adc : SmallInt;out pValue:Double;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAdcValue(adc : SmallInt;out pValue:SmallInt;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
